# netplay-index

./: .coveragerc  .gitignore  .travis.yml  README.md  admin.py  api.py  base.html  database.py  flake.nix  login.py  main.py  migrate.py  pyproject.toml  requirements.txt  settings.py  test_requirements.txt  util.py
.github/workflows/: run-tests.yml
admin/: __init__.py  bans.py  base.py  blacklist.html  blacklist.py  overview.html  overview.py  server_list.html  server_list.py  user_management.html  user_management.py
login/: __init__.py  login.html  login.py
netplay_index/: __init__.py  __main__.py  api.py  base.html  database.py  footer.html  metrics.py  sessions.py  settings.py  util.py
netplay_index/admin/: __init__.py  bans.html  bans.py  base.py  blacklist.py  overview.html  overview.py  server_list.py  user_management.py
netplay_index/login/: __init__.py  login.py  logout.html
netplay_index/static/: style.css
netplay_index/tests/: __init__.py  admin.py  api.py  base.py  database.py  redirect.py  runtests.py  test_api.py  test_metrics.py  test_redirect.py
static/: dynload.js  style.css
testdata/: README.md
views/: base.html  login.html  logout.html
views/admin/: admin.html  bans.html  blacklist.html  server_list.html  user_management.html
