[tool.poetry]
name = "netplay-index"
version = "0.1.0"
description = "Dolphin's NetPlay Index / Lobby Server"
authors = ["spycrab"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
netplay-index = "netplay_index.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0.2"
bcrypt = "^3.1.6"
geoip2 = "^2.9.0"
prometheus-client = "^0.6.0"

[tool.poetry.dev-dependencies]
tornado-utils = "^1.6"
beautifulsoup4 = "^4.6.0"
coveralls = "^3.3.1"
coverage = "^6.4.4"
black = "^22.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
